--- a/src/main/webapp/WEB-INF/view/admin/models/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/models/edit.html
@@ -32,6 +32,7 @@
         <input type="hidden" th:field="*{id}"/>
         <input type="hidden" th:field="*{status}"/>
         <input type="hidden" th:field="*{imageFileName}"/>
+        <input type="hidden" th:field="*{barsicFileName}"/>
 
         <div class="form-row text-left align-items-center">
             <div class="col-3"><label for="prefix" style="width: auto">Префикс</label></div>
