--- a/src/main/webapp/WEB-INF/view/admin/models/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/models/edit.html
@@ -210,7 +210,7 @@
             <div class="col-3"><label for="brcFile" style="width: auto">Файл BARSIC</label></div>
             <div class="col-9">
                 <div class="form-row align-items-center">
-                    <div id="brcFileDiv" class="col-12" th:classappend="${model.barsicFileName == null or model.barsicFileName == ''} ? 'was-validated'">
+                    <div class="col-12" th:classappend="${model.barsicFileName == null or model.barsicFileName == ''} ? 'was-validated'">
                         <input type="file" id="brcFile" class="custom-file-input" th:field="*{barsicFile}"
                                accept=".brc" th:classappend="${model.barsicFileName != null and model.barsicFileName != ''} ? 'is-valid'"
                                th:required="${model.barsicFileName == null or model.barsicFileName == ''}">
@@ -219,6 +219,10 @@
                             Файл не выбран
                         </label>
                         <div class="invalid-feedback">Пожалуйста, прикрепите BARSIC-файл</div>
+                        <div th:if="${model.barsicFileName != null and model.barsicFileName != ''}"
+                             id="brcExtError" class="invalid-feedback" style="display: none">
+                            BARSIC-файл должен иметь расширение brc
+                        </div>
                         <div id="brcSizeError" class="invalid-feedback" style="display: none">
                             Размер BARSIC-файла не должен превышать 10 Мб
                         </div>
@@ -283,22 +287,25 @@
 
     $('#brcFile').on('change', function() {
         var brcName = $(this).val().replace(/C:\\fakepath\\/i, '')
-        var brcFileDiv = document.getElementById('brcFileDiv')
         var sizeErrMsg = document.getElementById('brcSizeError')
+        var extErrMsg = document.getElementById('brcExtError')
         var exts = /(\.brc)$/i
         var isExt = exts.exec(this.files[0].name) != null
         var isSize = this.files[0].size <= 10485760
         if (isExt && isSize) {
             $(this).next('.custom-file-label').html(brcName)
             sizeErrMsg.style.display = 'none'
+            if (extErrMsg !== null) extErrMsg.style.display = 'none'
         } else if (!isExt) {
             $(this).next('.custom-file-label').html('Файл не выбран')
             $(this).val(null)
+            if (extErrMsg !== null) extErrMsg.style.display = 'block'
             sizeErrMsg.style.display = 'none'
         } else if (!isSize) {
             $(this).next('.custom-file-label').html('Файл не выбран')
             $(this).val(null)
             sizeErrMsg.style.display = 'block'
+            if (extErrMsg !== null) extErrMsg.style.display = 'none'
         }
     });
 
