--- a/src/main/webapp/WEB-INF/view/admin/models/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/models/edit.html
@@ -230,7 +230,8 @@
                 </div>
                 <div id="brcFileAttr" class="form-row align-items-center" style="display: none">
                     <div class="col-12">
-                        <a href="#" class="abutton">Просмотр</a>
+                        <a th:href="@{/data/models/{barsicFileName}(barsicFileName=${model.barsicFileName})}"
+                           th:text="'Скачать ' + ${model.barsicFileName}" class="abutton"></a>
                     </div>
                 </div>
             </div>
