--- a/src/main/webapp/WEB-INF/view/admin/tasks/preview.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/preview.html
@@ -113,17 +113,17 @@
         <div style="margin: .5rem; overflow-wrap: anywhere; overflow: auto">
             <img th:src="@{/data/tasks/{imageName}(imageName=${task.imageFileName})}"
                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
-                 alt="Image not found" style="margin-right: .5rem; float: left; vertical-align: middle;"
+                 alt="Image not found" style="margin-right: .5rem; float: left;"
                  th:if="${task.width == 0 and task.height != 0 and task.imageFileName != null}"
                  th:styleappend="'height:' + ${task.height} + 'px'"/>
             <img th:src="@{/data/tasks/{imageName}(imageName=${task.imageFileName})}"
                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
-                 alt="Image not found" style="margin-right: .5rem; float: left; vertical-align: middle;"
+                 alt="Image not found" style="margin-right: .5rem; float: left;"
                  th:if="${task.height == 0 and task.width != 0  and task.imageFileName != null}"
                  th:styleappend="'width:' + ${task.width} + 'px'"/>
             <img th:src="@{/data/tasks/{imageName}(imageName=${task.imageFileName})}"
                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
-                 alt="Image not found" style="margin-right: .5rem; float: left; vertical-align: middle;"
+                 alt="Image not found" style="margin-right: .5rem; float: left;"
                  th:if="${task.width != 0 and task.height != 0 and task.imageFileName != null}"
                  th:styleappend="'height:' + ${task.height} + 'px; width:' + ${task.width} + 'px'"/>
             <div th:utext="${task.parsedProblemText}"></div>
