--- a/src/main/webapp/WEB-INF/view/admin/tasks/preview.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/preview.html
@@ -30,6 +30,9 @@
             vertical-align: middle;
             text-align: center;
         }
+        textarea {
+            min-height: 2rem;
+        }
         .text-wrapping {
             white-space: break-spaces;
             overflow-wrap: anywhere;
