--- a/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
@@ -13,6 +13,9 @@
         .tooltip-inner {
             text-align: left;
         }
+        textarea {
+            min-height: 2rem;
+        }
     </style>
 </head>
 
