--- a/src/main/webapp/WEB-INF/view/admin/tests/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tests/edit.html
@@ -32,6 +32,9 @@
         <input type="hidden" th:field="*{id}"/>
         <input type="hidden" th:field="*{status}"/>
         <input type="hidden" th:field="*{imageFileName}"/>
+        <input type="hidden" th:field="*{testFolder}"/>
+        <input type="hidden" th:field="*{brcFileName}"/>
+        <input type="hidden" th:field="*{parFileName}"/>
 
         <div class="form-row text-left align-items-center">
             <div class="col-3"><label for="prefix" style="width: auto">Префикс</label></div>
@@ -119,15 +122,15 @@
                                             </button>
                                         </div>
                                         <div class="modal-body text-center" style="overflow: auto; margin: 1rem; padding: 0">
-                                            <img th:src="@{/data/tests/{imageName}(imageName=${test.imageFileName})}"
+                                            <img th:src="@{/data/tests/{imageName}(imageName=${test.testFolder + '/' + test.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
                                                  alt="Image not found" th:if="${test.width == 0 and test.height != 0}"
                                                  th:style="'height:' + ${test.height} + 'px'"/>
-                                            <img th:src="@{/data/tests/{imageName}(imageName=${test.imageFileName})}"
+                                            <img th:src="@{/data/tests/{imageName}(imageName=${test.testFolder + '/' + test.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
                                                  alt="Image not found" th:if="${test.height == 0 and test.width != 0 }"
                                                  th:style="'width:' + ${test.width} + 'px'"/>
-                                            <img th:src="@{/data/tests/{imageName}(imageName=${test.imageFileName})}"
+                                            <img th:src="@{/data/tests/{imageName}(imageName=${test.testFolder + '/' + test.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
                                                  alt="Image not found" th:if="${test.width != 0 and test.height != 0}"
                                                  th:style="'height: ' + ${test.height} + 'px; width: ' + ${test.width} + 'px'"/>
@@ -147,11 +150,11 @@
                 <div class="form-row align-items-center">
                     <div class="col-xl-0 form-check">
                         <input id="isHidden" type="checkbox" class="form-check-input"
-                               th:field="*{hideResult}" autocomplete="off" style="position: inherit">
+                               th:field="*{showResult}" autocomplete="off" style="position: inherit">
                     </div>
                     <div class="col-9">
                         <label for="isHidden" class="form-check-label" style="width: auto">
-                            Не показывать результаты пользователю
+                            Показывать результаты пользователю
                         </label>
                     </div>
                 </div>
@@ -182,6 +185,15 @@
                 <input id="minPoints" type="number" step="any" min="0" max="65535" class="form-control form-control-sm text-dark"
                        th:field="*{minPoints}" required/>
                 <div class="invalid-feedback">Минимальный балл за правильный ответ должен быть от 0 до 65535</div>
+            </div>
+        </div>
+
+        <div class="form-row text-left align-items-center">
+            <div class="col-3">
+                Редактор
+            </div>
+            <div class="col-9">
+                <a href="#" class="abutton">Редактировать тест</a>
             </div>
         </div>
     </div>
