--- a/src/main/webapp/WEB-INF/view/admin/models/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/models/edit.html
@@ -234,7 +234,7 @@
                 <div id="brcFileAttr" class="form-row align-items-center" style="display: none">
                     <div class="col-12">
                         <a th:href="@{/data/models/{barsicFileName}(barsicFileName=${model.barsicFileName})}"
-                           th:text="'Просмотр ' + ${model.barsicFileName}" class="abutton"></a>
+                           th:text="'Просмотр'" class="abutton"></a>
                     </div>
                 </div>
             </div>
