--- a/src/main/webapp/WEB-INF/view/admin/tests/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tests/edit.html
@@ -13,12 +13,20 @@
         textarea {
             min-height: 2rem;
         }
+        .tableactions {
+            color: #212529;
+            font-weight: bold;
+        }
+        .tableactions:hover {
+            color: #FF0000;
+            font-weight: bold;
+        }
     </style>
 </head>
 
 <div th:replace="fragments/header :: #header"></div>
 
-<body class="bgGrey" th:attr="onload=|onUpdateImage('${test.imageFileName}')|"
+<body class="bgGrey" th:attr="onload=|onUpdateImage('${test.imageFileName}', '${test.randomOrder}')|"
       style="min-width: 612px; font-family: sans-serif; font-size: 11pt">
 
 <div th:replace="fragments/menu-staff :: #menustaff"></div>
@@ -149,24 +157,77 @@
             <div class="col-9">
                 <div class="form-row align-items-center">
                     <div class="col-xl-0 form-check">
-                        <input id="isHidden" type="checkbox" class="form-check-input"
-                               th:field="*{showResult}" autocomplete="off" style="position: inherit">
+                        <input id="isShow" type="checkbox" class="form-check-input"
+                               th:field="*{showResult}" autocomplete="off" style="position: inherit"/>
                     </div>
                     <div class="col-9">
-                        <label for="isHidden" class="form-check-label" style="width: auto">
+                        <label for="isShow" class="form-check-label" style="width: auto">
                             Показывать результаты пользователю
                         </label>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div class="form-row text-left align-items-center">
-            <div class="col-3"><label for="gradePoints" style="width: auto">Количество баллов за тест</label></div>
-            <div class="col-9 was-validated">
-                <input id="gradePoints" type="number" step="any" min="0" max="65535" class="form-control form-control-sm text-dark"
-                       th:field="*{points}" required/>
-                <div class="invalid-feedback">Количество баллов за тест должно быть от 0 до 65535</div>
+                <div class="form-row align-items-center" th:attr="onclick=|onUpdateImage('${test.imageFileName}', '${test.randomOrder}')|">
+                    <div class="col-xl-0 form-check">
+                        <input id="randomOrder" type="checkbox" class="form-check-input"
+                               th:field="*{randomOrder}" autocomplete="off" style="position: inherit"/>
+                    </div>
+                    <div class="col-9">
+                        <label for="randomOrder" class="form-check-label" style="width: auto">
+                            Случайный порядок вопросов в тесте
+                        </label>
+                    </div>
+                </div>
+                <div id="questionCount" style="display: none; white-space: nowrap" onclick="countPoints()">
+                    <div class="form-row align-items-center">
+                        <div class="col-auto">
+                            <label for="easyQuestion" style="width: auto">Легких вопросов (2 балла):</label>
+                        </div>
+                        <div class="col-auto form-check">
+                            <select id="easyQuestion" th:field="*{questionsNumber[0]}">
+                                <option th:each="i : ${#numbers.sequence(0, __${test.allQuestionsNumber[0]}__, 1)}"
+                                        th:text="${i}" th:value="${i}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row align-items-center">
+                        <div class="col-auto">
+                            <label for="normalQuestion" style="width: auto">Средних вопросов (4 балла):</label>
+                        </div>
+                        <div class="col-auto form-check">
+                            <select id="normalQuestion" th:field="*{questionsNumber[1]}">
+                                <option th:each="i : ${#numbers.sequence(0, __${test.allQuestionsNumber[1]}__, 1)}"
+                                        th:text="${i}" th:value="${i}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row align-items-center">
+                        <div class="col-auto">
+                            <label for="hardQuestion" style="width: auto">Сложных вопросов (6 баллов):</label>
+                        </div>
+                        <div class="col-auto form-check">
+                            <select id="hardQuestion" th:field="*{questionsNumber[2]}">
+                                <option th:each="i : ${#numbers.sequence(0, __${test.allQuestionsNumber[2]}__, 1)}"
+                                        th:text="${i}" th:value="${i}"></option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row align-items-center">
+                    <div class="col-12 form-check">
+                        <div id="points">Количество баллов за тест:</div>
+                    </div>
+                </div>
+                <div class="form-row align-items-center">
+                    <div class="col-xl-0 form-check">
+                        <input id="questionSkip" type="checkbox" class="form-check-input"
+                               th:field="*{questionSkip}" autocomplete="off" style="position: inherit"/>
+                    </div>
+                    <div class="col-9">
+                        <label for="questionSkip" class="form-check-label" style="width: auto">
+                            Кнопка "Пропустить"
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -179,21 +240,43 @@
             </div>
         </div>
 
-        <div class="form-row text-left align-items-center">
-            <div class="col-3"><label for="minPoints" style="width: auto">Минимальное количество баллов за правильный ответ</label></div>
-            <div class="col-9 was-validated">
-                <input id="minPoints" type="number" step="any" min="0" max="65535" class="form-control form-control-sm text-dark"
-                       th:field="*{minPoints}" required/>
-                <div class="invalid-feedback">Минимальный балл за правильный ответ должен быть от 0 до 65535</div>
+        <div class="form-row text-center align-items-center" style="margin-top: 1rem; margin-bottom: .5rem">
+            <div class="col-12">
+                <strong>Список вопросов</strong>
             </div>
         </div>
 
-        <div class="form-row text-left align-items-center">
-            <div class="col-3">
-                Редактор
-            </div>
-            <div class="col-9">
-                <a href="#" class="abutton">Редактировать тест</a>
+        <div class="form-row text-center align-items-center">
+            <div class="col-12" style="overflow: auto">
+                <div style="margin-bottom: .5rem">
+                    <a href="#" class="btn btn-light" style="display: block">Добавить вопрос</a>
+                </div>
+
+                <table class="table table-striped table-light table-sm"
+                       style="border-radius: .2rem; margin-bottom: 0"
+                       aria-describedby=" Test's questions table">
+                    <thead class="thead-light">
+                    <tr>
+                        <th scope="col" style="border-radius: .2rem 0 0 0">№</th>
+                        <th scope="col">Вопрос</th>
+                        <th scope="col">Тип</th>
+                        <th scope="col">Сложность</th>
+                        <th scope="col" style="border-radius: 0 .2rem 0 0">Действия</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="question : ${test.questionList}">
+                        <th scope="row" th:text="${question.number}" style="vertical-align: middle"></th>
+                        <td th:utext="${question.text}" style="vertical-align: middle"></td>
+                        <td th:text="${question.type}" style="vertical-align: middle"></td>
+                        <td th:text="${question.difficulty}" style="vertical-align: middle"></td>
+                        <td style="vertical-align: middle">
+                            <a href="#" class="tableactions">редактировать</a>
+                            <a href="#" class="tableactions">удалить</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -212,6 +295,25 @@
 <script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/4.6.0/js/bootstrap.min.js}"></script>
 <script type="text/javascript">
+    $('#questionUpdateModal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget)
+        var id = button.data('id')
+        var title = button.data('title')
+        var modal = $(this)
+        modal.find('.modal-body #questionText').val(title)
+        modal.find('.modal-body #testCopyId').val(id)
+    })
+
+    function countPoints() {
+        var eqc = document.getElementById('easyQuestion').value
+        var nqc = document.getElementById('normalQuestion').value
+        var hqc = document.getElementById('hardQuestion').value
+        var label = document.getElementById('points')
+
+        var result = 2 * eqc + 4 * nqc + 6 * hqc
+        label.innerHTML = 'Количество баллов за тест: <b>' + result + '</b>'
+    }
+
     $('#image').on('change', function() {
         var imageName = $(this).val().replace(/C:\\fakepath\\/i, '')
         var sizeErrMsg = document.getElementById('imageSizeError')
@@ -259,12 +361,26 @@
         }
     }
 
-    function onUpdateImage(imageFileName) {
+    function onUpdateImage(imageFileName, randomOrder) {
         if (imageFileName === "null" || imageFileName === "") {
             document.getElementById('imageAttr').style.display = "none";
         } else {
             document.getElementById('imageAttr').style.display = "block";
         }
+
+        if (document.getElementById('randomOrder').checked || randomOrder === 1) {
+            document.getElementById('questionCount').style.display = 'block'
+        } else {
+            document.getElementById('questionCount').style.display = 'none'
+            var eq = document.getElementById('easyQuestion')
+            var nq = document.getElementById('normalQuestion')
+            var hq = document.getElementById('hardQuestion')
+            eq.value = eq.options[eq.options.length - 1].value
+            nq.value = nq.options[nq.options.length - 1].value
+            hq.value = hq.options[hq.options.length - 1].value
+        }
+
+        countPoints()
     }
 </script>
 </html>
