--- a/src/main/webapp/WEB-INF/view/admin/models/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/models/edit.html
@@ -239,13 +239,15 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div style="text-align: center; margin-top: 1rem; margin-bottom: 1rem">
-        <button type="submit" class="btn btn-light border border-dark" style="width: 20%; min-width: 7.5rem" id="submitBtn"
-                onclick="trimInputs('title', 'problemText', 'gradePoints', 'minusPoints', 'minPoints', 'correctAnswer')">
-            Сохранить
-        </button>
+        <div class="form-row align-items-center">
+            <div class="col-12" style="margin-top: .5rem">
+                <button type="submit" class="btn btn-light border border-dark" style="width: 30%; min-width: 7.5rem" id="submitBtn"
+                        onclick="trimInputs('title', 'problemText', 'gradePoints', 'minusPoints', 'minPoints', 'correctAnswer')">
+                    Сохранить
+                </button>
+            </div>
+        </div>
     </div>
 </form>
 
